After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703119 - rtpbasepayload leaks the segment event
rtpbasepayload leaks the segment event
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.1.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-26 12:38 UTC by Ognyan Tonchev (redstar_)
Modified: 2013-06-26 13:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Do not leak the segment event (969 bytes, patch)
2013-06-26 12:39 UTC, Ognyan Tonchev (redstar_)
none Details | Review

Description Ognyan Tonchev (redstar_) 2013-06-26 12:38:52 UTC
rtpbasepayload leaks the segment event when segment is delayed
Comment 1 Ognyan Tonchev (redstar_) 2013-06-26 12:39:34 UTC
Created attachment 247816 [details] [review]
Do not leak the segment event
Comment 2 Wim Taymans 2013-06-26 13:46:25 UTC
commit 25fdde908a7f56ec9b335f49ba61dfd67cba87d7
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Jun 26 14:36:17 2013 +0200

    rtpbasepayload: Do not leak the event when segment is delayed
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=703119