rtpbasepayload: Do not leak the event when segment is delayed

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=703119